--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,8 +1,13 @@
-<div class="container">
-    {{>nav}}
-    <div class="container-fluid">
-        <div class="row">
-            {{>content}}
+{{!-- <div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            {{>nav}}
         </div>
     </div>
-</div>
+    <div class="row py-2">
+        <div class="col-md-12">
+            {{>content}}
+
+        </div>
+    </div>
+</div> --}}
