--- a/src/resources/views/layouts/container.hbs
+++ b/src/resources/views/layouts/container.hbs
@@ -14,8 +14,20 @@
 </head>
 
 <body>
-    {{{body}}}
+    <div class="container">
+        <div class="row">
+            {{!-- <div class="col-md-12">
+                {{>nav}}
+            </div> --}}
+            {{>nav}}
+        </div>
+        <div class="row">
 
+            {{>content}}
+
+        </div>
+    </div>
+    {{!-- {{{body}}} --}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
