--- a/src/resources/views/person.hbs
+++ b/src/resources/views/person.hbs
@@ -4,7 +4,7 @@
         <div class="card">
             <img src="{{avatar}}" class="card-img-top" alt="{{id}}">
             <div class="card-body">
-                <h5 class="card-title">{{first_name}}</h5>
+                <h5 class="card-title">{{full_name}}</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                     content. This content is a little bit longer.</p>
             </div>
